# Back End/routes/userRoutes.js
@@ -5,10 +5,12 @@ const User = require('../models/Users');
 
 router.post('/', async (req, res) => {
         try{
+            const { id, email, password, first_name, last_name, date_created } = req.body;
             const newUser = await User.create(req.body);
             res.status(201).send(newUser);
         } catch(error) {
-            return res.status(500).json({ message: "Error"})  
+            console.error("Creation Error: ", error);
+            return res.status(500).json({ message: "User creation error"})  
         }
     });
     
@@ -20,23 +22,30 @@ router.delete('/:id', async (req, res) => {
             if(!deletedUser){
                 return res.status(404).json({ message: "User not found" });
             }
+
+            res.status(201).json({ message: "User successfully deleted"})
         } catch(error) {
-            return res.status(500).json({ message: "Error"})  
+            console.error("Delete Error: ", error);
+            return res.status(500).json({ message: "User delete error"})  
         }
     });
 
 router.post('/login', async (req, res) => {
     try{
-        const { email, password} = req.body;
+        const { email, password } = req.body;
+        console.log("1. Incoming data:", req.body);
 
-        const user = await User.find(u => u.email === email && u.password === password);
+        // Temp password check before hashing is implemented
+        const user = await User.findOne({ email: email, password: password });
+        console.log("2. Database result:", user);
 
         if (!user){
             return res.status(401).json({ message: 'Invalid Credentials' });
         }
 
-        res.json({ message: "Success", user: user.user_id });
+        return res.json({ message: "Success", user: user.user_id });
     } catch(error) {
+        console.error("Login Error: ", error);
         return res.status(500).json({ message: "User Login Error"})  
     }
 })
